fix: reduce navbar padding to 0.12rem on mobile
Navbar minimal height:
- Reduce navbar padding from 0.16rem to 0.12rem on mobile

--- a/Styling/styles.css
+++ b/Styling/styles.css
@@ -916,7 +916,7 @@ h3 {
     }
 
     .navbar {
-        padding: 0.16rem;
+        padding: 0.12rem;
         justify-content: space-between;
     }
 
